# desktop

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  development.md  installation.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/: ApprovalCard.tsx  ExecutionRow.tsx  Layout.tsx  PeriodTabs.tsx  StatCard.tsx  StatusBadge.tsx  TraceSpan.tsx  TraceTree.tsx
src/hooks/: useApprovals.ts  useDashboard.ts  useExecutions.ts  useInfiniteScroll.ts  useSettings.ts  useTraces.ts
src/lib/: api.ts  utils.ts
src/pages/: Approvals.tsx  ExecutionDetail.tsx  Feed.tsx  Settings.tsx  Setup.tsx  Stats.tsx  TrayPanel.tsx
src/stores/: auth.ts
