[package]
name = "promptrails-monitor"
version = "0.1.0"
description = "PromptRails Monitor - Desktop monitoring app for AI agent executions"
authors = ["PromptRails"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "promptrails_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
